; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_ri_triggers.c_RI_FKey_trigger_type.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_ri_triggers.c_RI_FKey_trigger_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RI_TRIGGER_PK = common dso_local global i32 0, align 4
@RI_TRIGGER_FK = common dso_local global i32 0, align 4
@RI_TRIGGER_NONE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @RI_FKey_trigger_type(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %9 [
    i32 139, label %5
    i32 138, label %5
    i32 133, label %5
    i32 132, label %5
    i32 129, label %5
    i32 128, label %5
    i32 131, label %5
    i32 130, label %5
    i32 135, label %5
    i32 134, label %5
    i32 137, label %7
    i32 136, label %7
  ]

5:                                                ; preds = %1, %1, %1, %1, %1, %1, %1, %1, %1, %1
  %6 = load i32, i32* @RI_TRIGGER_PK, align 4
  store i32 %6, i32* %2, align 4
  br label %11

7:                                                ; preds = %1, %1
  %8 = load i32, i32* @RI_TRIGGER_FK, align 4
  store i32 %8, i32* %2, align 4
  br label %11

9:                                                ; preds = %1
  %10 = load i32, i32* @RI_TRIGGER_NONE, align 4
  store i32 %10, i32* %2, align 4
  br label %11

11:                                               ; preds = %9, %7, %5
  %12 = load i32, i32* %2, align 4
  ret i32 %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
